tests/golden/snapshots/render_scaffolders_matrix__program_edition_2024.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
=== programs/future_program/Cargo.toml ===
[package]
name = "future_program"
version = "0.1.0"
description = "Anchor program for Future App"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "future_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
=== programs/future_program/Xargo.toml ===
[target.bpfel-unknown-unknown.dependencies.std]
features = []
=== programs/future_program/src/instructions/mod.rs ===
//! Instruction module registry for `future_program`.
//!
//! The `segment=instructions` block below is managed by
//! `sunscreen scaffold instruction` — edits inside the markers will be
//! overwritten. Code outside the markers is preserved across re-runs.

// === sunscreen:auto-generated:begin segment=instructions version=1 generator=instruction ===
// === sunscreen:auto-generated:end segment=instructions ===
=== programs/future_program/src/lib.rs ===
//! `future_program` — Anchor program scaffolded by `sunscreen scaffold program`.
//!
//! The `segment=*` blocks below are managed by the `sunscreen scaffold`
//! family of commands. Edits inside the markers will be overwritten on the
//! next scaffold run; code outside the markers is preserved.

use anchor_lang::prelude::*;

pub mod instructions;
#[allow(unused_imports)]
use instructions::*;

declare_id!("Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS");

#[program]
pub mod future_program {
    use super::*;

    // === sunscreen:auto-generated:begin segment=dispatch version=1 generator=dispatch ===
    // === sunscreen:auto-generated:end segment=dispatch ===
}
